[package]
name = "{{ project-name }}-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
{{ project-name }}-common = { path = "../{{ project-name }}-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }
xtask = { path = "../xtask" }

[[bin]]
name = "{{ project-name }}"
path = "src/main.rs"
