[package]
name = "{{ project-name }}-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
{{ project-name }}-common = { path = "../{{ project-name }}-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "{{ project-name }}_ebpf"
path = "src/main.rs"
