[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
{% if program_types_with_opts contains program_type -%}
clap = { version = "4.1", features = ["derive"] }
{% endif -%}
{{project-name}}-common = { path = "../{{project-name}}-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
{%- if program_type == "uprobe" %}
libc = "0.2"
{%- endif %}
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
rlimit = "0.9.1"

[[bin]]
name = "{{project-name}}"
path = "src/main.rs"
