[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
{{project-name}}-common = { path = "../{{project-name}}-common", features = ["user"] }

anyhow = { workspace = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = {workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

{% if program_types_with_opts contains program_type -%}
clap = { workspace = true, features = ["derive"] }
{% endif -%}

[[bin]]
name = "{{project-name}}"
path = "src/main.rs"
